@@ -559,7 +559,6 @@ var typoscriptWords = {
 	'mask': 'reserved',
 	'max': 'reserved',
 	'maxAge': 'reserved',
-	'maxAgeDays': 'reserved',
 	'maxChars': 'reserved',
 	'maxH': 'reserved',
 	'maxHeight': 'reserved',
@@ -1903,7 +1902,6 @@ var typoscriptWords = {
 	'mask': 'reserved',
 	'max': 'reserved',
 	'maxAge': 'reserved',
-	'maxAgeDays': 'reserved',
 	'maxChars': 'reserved',
 	'maxH': 'reserved',
 	'maxHeight': 'reserved',
